# KeyCape

./: .Doxyfile  .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  _config.yml  compose-dev.yaml  config.json  index.html  index.markdown  main.cc  package-lock.json
.docker/: Dockerfile  Dockerfile.build  Dockerfile.buildenv  Dockerfile.demo  Dockerfile.dev  Dockerfile.nvim  docker-compose.yml
.docker/mariadb/docker-entrypoint-initdb.d/: webauthn.sql
_data/: features.yml  sitelist.yml
_includes/: head.html  nav.html
_layouts/: default.html
_posts/: 2023-06-19-welcome-to-jekyll.markdown
assets/js/: main.js
controllers/: Login.cc  Login.h  Logout.cc  Logout.h  Oidc.cc  Oidc.h  Register.cc  Register.h  User.cc  User.h  WebauthnController.h
controllers/helper/: response.cpp  response.h
filters/: UserFilter.cc  UserFilter.h
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  webpack.config.js
frontend/src/: App.vue  Main.elm  index.html  index.js  index.scss  main.ts
frontend/src/assets/: styles.scss
frontend/src/router/: index.ts
frontend/src/views/: LoginView.vue  RegisterView.vue
lib/oidc/: IdToken.cpp  IdToken.h
models/: SessionToken.cpp  SessionToken.h
static/: clientRegister.html
test/: CMakeLists.txt
views/: Authorize.csp  ClientRegisterFinish.csp
